--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@pgamerx/djs-addon",
-  "version": "1.0.1",
-  "description": "",
+  "version": "1.0.3",
+  "description": "This is a npm package that allows you to easily add fun features using DiscordJS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "main": "main.js",
+    "typings": "index.d.ts"
   },
   "author": "",
   "license": "ISC",
@@ -17,5 +19,8 @@
     "quickmongo": "^4.0.0",
     "random-puppy": "^1.1.0",
     "rss-parser": "^3.12.0"
+  },
+  "devDependencies": {
+    "typescript": "^4.4.4"
   }
 }
