--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pgamerx/djs-addon",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "This is a npm package that allows you to easily add fun features using DiscordJS",
   "main": "index.js",
   "scripts": {
@@ -19,6 +19,13 @@
     "quickmongo": "^4.0.0",
     "random-puppy": "^1.1.0",
     "rss-parser": "^3.12.0"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pgamerx/djs-addon.git"
   },
   "devDependencies": {
     "typescript": "^4.4.4"
