--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "canvacord": "^5.2.3",
     "canvas": "^2.8.0",
     "discord-youtube-api": "^0.1.0",
     "discord.js": "^13.2.0",
