--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@pgamerx/djs-addon",
-  "version": "1.0.5",
+  "version": "1.0.7",
   "description": "This is a npm package that allows you to easily add fun features using DiscordJS",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "main": "main.js",
