--- a/package.json
+++ b/package.json
@@ -16,10 +16,7 @@
     "discord-youtube-api": "^0.1.0",
     "discord.js": "^13.2.0",
     "mathjs": "^9.5.1",
-    "path": "^0.12.7",
-    "quickmongo": "^4.0.0",
-    "random-puppy": "^1.1.0",
-    "rss-parser": "^3.12.0"
+    "random-puppy": "^1.1.0"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
