--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
   "name": "@pgamerx/djs-addon",
-  "version": "1.0.8",
+  "version": "1.1.0",
   "description": "This is a npm package that allows you to easily add fun features using DiscordJS",
   "main": "main.js",
+  "keywords": [
+    "discord.js",
+    "discord.js addon",
+    "discord bot",
+    "discord addon",
+    "discord chatbot",
+    "discord slash commands",
+    "discord fun",
+    "discord"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "main": "main.js",
